Fix unexpected scrollbars in Firefox
Quite a few places were using 100vw where 100% was the correct thing to
use. Additionally, some overflow: scrolls were specified where letting
the browser auto-scroll when needed was the right thing to do.

Finally, explicitly add overflow-y: auto to the wallet asset/activity
panel so that the whole wallet screen doesn't scroll when many assets or
activities appear. That behavior may best be rolled back, depending on
UX preferences.

--- a/ui/public/index.css
+++ b/ui/public/index.css
@@ -31,10 +31,6 @@
   --info-20: #d4e9f0;
 }
 
-html {
-  overflow: scroll;
-}
-
 ::-webkit-scrollbar {
   width: 0px;
   background: transparent;
